# llm.c

./: .gitignore  README.md
llm.c/: CMakeLists.txt  bench_layernorm  compile_commands.json  encoder_backward  pre_train_gpt2_myself.py  train_gpt2  train_gpt2.cu  train_gpt2_by_myself  train_gpt2_by_myself.cpp  train_gpt2_by_myself.cu  train_gpt2cu  train_log_2026-01-28.txt  train_log_2026-01-28_v1.txt  train_log_2026-01-28_v2.txt
train_tokenizer/: README.md  make_bin.py  train_tokenizer.py
train_tokenizer/datasets/: 三体全集  三体全集.txt  中国2185.txt  中国太阳.txt  乡村教师.txt  光荣与梦想.txt  全频段阻塞干扰.txt  刘慈欣中短篇科幻作品.txt  吞食者.txt  圆圆的肥皂泡.txt  地球大炮.txt  山.txt  微纪元.txt  思想者.txt  朝闻道.txt  流浪地球.txt  白垩纪往事.txt  西洋.txt  赡养上帝.txt  超新星纪元.txt  镜子.txt  魔鬼积木.txt
train_tokenizer/output_tokenizer/: dataset_info.txt  threebody_tokenizer.json  vocab_log.txt
